# ba_automation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  input.json  main.py  pyproject.toml  setup.cfg  test_workblock.py  test_workday.py  test_workweek.py  workblock.py  workday.py  workweek.py
bautomate/: workblock.py  workday.py  workweek.py
tests/: test_workblock.py  test_workday.py  test_workweek.py
