[metadata]
name = bautomate
version = file:VERSION
description = This script is a test/fun project, which automates writing work hours into a certain web application. It reads data from a JSON file and posts it into the web application using Selenium.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/rudieh/ba_automation.git
author = rudieh
# author_email =
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
project_urls =
#    Documentation =
    Source = https://github.com/rudieh/ba_automation.git
    Tracker = https://github.com/rudieh/ba_automation/issues

[options]
zip_safe = False
packages = find:
platforms =
    manylinux2014_x86_64
include_package_data = True
install_requires =
    selenium
python_requires = >=3.8

[options.extras_require]
tests =
    black
    coverage
    flake8
    mypy
    pre-commit
    pycodestyle
    pytest >= 6.2.2
    pytest-cov
all =
    %(tests)s

[flake8]
max-line-length = 88
max-complexity = 10
# These checks violate PEP8 so let's ignore them
extend-ignore = E203

[mypy]
python_version = 3.8
ignore_missing_imports = True
